SFUSA/force-app/main/default/objects/Calendar_View__c/fields/Calendar_Setting__c.field-meta.xml
<CustomField>
        <fullName>Calendar_Setting__c</fullName>
        <label>Calendar Setting</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>