SFUSA/force-app/main/default/objects/Calendar_View__c/fields/Distributor_Settings__c.field-meta.xml
<CustomField>
        <fullName>Distributor_Settings__c</fullName>
        <label>Distributor Settings</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </CustomField>