SFUSA/force-app/main/default/objects/Calendar_View__c/fields/Is_Default__c.field-meta.xml
<CustomField>
        <fullName>Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default</label>
        <type>Checkbox</type>
    </CustomField>