SFUSA/force-app/main/default/objects/Calendar_View__c/fields/Type__c.field-meta.xml
<CustomField>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                    <default>true</default>
                    <label>User</label>
                </value>
                <value>
                    <fullName>Perspective</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>