SFUSA/force-app/main/default/objects/Calendar_View__c/fields/User__c.field-meta.xml
<CustomField>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Calendar_Views</relationshipName>
        <type>Lookup</type>
    </CustomField>