SFUSA/force-app/main/default/objects/Calendar_View__c/fields/View_Name__c.field-meta.xml
<CustomField>
        <fullName>View_Name__c</fullName>
        <defaultValue>"Default View"</defaultValue>
        <label>View Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>